# toolkit-rag

./: .gitignore  .gitmodules  LICENSE  README.md  cli.py  docker-compose.yml  install.sh  pyproject.toml  rag  rag_server  requirements.txt
docker/: docker-compose.local.yml  docker-compose.openai.yml  docker-compose.production.yml  docker-compose.tei.yml  setup-local.sh  setup-openai.sh  setup-tei.sh
docs/: API_REFERENCE.md  DEPLOYMENT.md  INSTALLATION.md  INTEGRATIONS.md
examples/: basic_usage.py  custom_bridge.py
rag_client/: __init__.py  client.py  document_processor.py  manager.py  processor.py  rag_client.py  rag_manager.py
rag_server/: Dockerfile  requirements.txt
rag_server/app/: middleware.py  models.py
rag_server/app/routes/: document_routes.py
rag_server/app/services/vector_store/: async_pg_vector.py  atlas_mongo_vector.py  extended_pg_vector.py
rag_server/app/utils/: document_loader.py
