[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-rag"
version = "1.0.0"
description = "Generic RAG system for universal integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Toolkit-RAG Contributors"}
]
keywords = ["rag", "retrieval", "vector-search", "embeddings", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.28.0",
    "aiohttp>=3.8.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "sqlalchemy>=2.0.28",
    "langchain>=0.3.12",
    "langchain-community>=0.3.12",
    "langchain-core>=0.3.27",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.19",
    "aiofiles>=23.2.1",
    "click>=8.0.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
server = [
    "langchain-openai>=0.2.11",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.1.1",
    "pypdf>=4.1.0",
    "unstructured>=0.16.11",
    "markdown>=3.6",
    "python-pptx>=0.6.23",
    "docx2txt>=0.8",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "python-magic>=0.4.27",
    "nltk>=3.8.1"
]

mongodb = [
    "pymongo>=4.6.3",
    "langchain-mongodb>=0.2.0"
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/ersantana361/toolkit-rag"
Repository = "https://github.com/ersantana361/toolkit-rag.git"
Issues = "https://github.com/ersantana361/toolkit-rag/issues"

[project.scripts]
toolkit-rag = "cli:main"

[tool.setuptools.packages.find]
include = ["rag_server*", "rag_client*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true